--- a/Taskfile.yml
+++ b/Taskfile.yml
@@ -2,7 +2,7 @@ version: "3"
 
 tasks:
   build:
-    cmd: go build -o bin/band-api cmd/main.go
+    cmd: go build -o bin/band-api main.go
 
   run:
     deps:
