--- a/.github/workflows/build-push-to-acr.yml
+++ b/.github/workflows/build-push-to-acr.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - main
 
+permissions:
+  id-token: write
+  contents: read
+
 jobs:
   docker:
     runs-on: ubuntu-latest
@@ -12,5 +16,15 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
-      - name: build the docker image
-        run: docker build -t bandapi:$(date +%s) .
+      - name: docker build
+        run: docker build -t ${{ secrets.ACR_SERVER_LAB}}/bandapi:v1 .
+
+      - name: az login
+        uses: Azure/login@v2.0.0
+        with:
+          client-id: ${{ secrets.AZURE_CLIENT_ID }}
+          tenant-id: ${{ secrets.AZURE_TENANT_ID }}
+          subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+
+      - name: docker push
+        run: docker push ${{ secrets.ACR_SERVER_LAB}}/bandapi:v1
