--- a/.github/workflows/build-push-to-acr.yml
+++ b/.github/workflows/build-push-to-acr.yml
@@ -17,13 +17,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
-      - name: Generate Docker Image PR tag
+      - name: Generate Docker Image tag
         id: docker_tag
-        run: |
-          GIT_SHA_SHORT=$(${GITHUB_SHA::7})
-          echo "DOCKER_IMAGE_TAG=$GIT_SHA_SHORT" >> $GITHUB_OUTPUT
+        run: echo "DOCKER_IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
-      - name: docker build
+      - name: Docker Build
         run: docker build -t ${{ secrets.ACR_SERVER_LAB }}/bandapi:${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }} .
 
       - name: az login
@@ -33,7 +31,7 @@ jobs:
           tenant-id: ${{ secrets.AZURE_TENANT_ID }}
           subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
 
-      - name: docker push
+      - name: Docker Push
         run: |
           az acr login --name ${{ secrets.ACR_REGISTRY_LAB }}
           docker push ${{ secrets.ACR_SERVER_LAB}}/bandapi:${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }}
