--- a/.github/workflows/build-push-to-acr.yml
+++ b/.github/workflows/build-push-to-acr.yml
@@ -1,10 +1,6 @@
 name: Build and push container to acr
 
-on:
-  workflow_dispatch:
-  push:
-    branches:
-      - main
+on: workflow_dispatch
 
 permissions:
   id-token: write
