--- a/.github/workflows/build-push-ghcr.yaml
+++ b/.github/workflows/build-push-ghcr.yaml
@@ -22,4 +22,4 @@ jobs:
         run: echo "DOCKER_IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Docker Build
-        run: docker build -t ${{ secrets.ACR_SERVER_LAB }}/bandapi:${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }} .
+        run: docker build -t bandapi:${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }} .
