--- a/.github/workflows/build-push-ghcr.yml
+++ b/.github/workflows/build-push-ghcr.yml
@@ -23,9 +23,9 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4.1.1
 
-      # - name: Generate Docker Image tag
-      #   id: docker_tag
-      #   run: echo "DOCKER_IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
+      - name: Generate Docker Image tag
+        id: docker_tag
+        run: echo "DOCKER_IMAGE_TAG=${GITHUB_SHA::7}" >> $GITHUB_OUTPUT
 
       - name: Login to container registry
         uses: docker/login-action@v3
@@ -49,12 +49,12 @@ jobs:
         with:
           context: .
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: ${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }}
           labels: ${{ steps.meta.outputs.labels }}
 
-      - name: Generate artifact attestation
-        uses: actions/attest-build-provenance@v2
-        with:
-          subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
-          subject-digest: ${{ steps.push.outputs.digest }}
-          push-to-registry: true
+      # - name: Generate artifact attestation
+      #   uses: actions/attest-build-provenance@v2
+      #   with:
+      #     subject-name: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME}}
+      #     subject-digest: ${{ steps.push.outputs.digest }}
+      #     push-to-registry: true
