--- a/.github/workflows/build-push-ghcr.yml
+++ b/.github/workflows/build-push-ghcr.yml
@@ -40,17 +40,19 @@ jobs:
         with:
           images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
 
-      # - name: Docker Build
-      #   run: docker build -t bandapi:${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }} .
+      - name: Docker Build and Push
+        run: |
+          docker build -t ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }} .
+          docker push ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}:${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }}
 
-      - name: Build and push Docker image
-        id: push
-        uses: docker/build-push-action@v6
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }}
-          labels: ${{ steps.meta.outputs.labels }}
+      # - name: Build and push Docker image
+      #   id: push
+      #   uses: docker/build-push-action@v6
+      #   with:
+      #     context: .
+      #     push: true
+      #     tags: ${{ steps.docker_tag.outputs.DOCKER_IMAGE_TAG }}
+      #     labels: ${{ steps.meta.outputs.labels }}
 
       # - name: Generate artifact attestation
       #   uses: actions/attest-build-provenance@v2
