--- a/.github/workflows/build-push-ghcr.yml
+++ b/.github/workflows/build-push-ghcr.yml
@@ -18,7 +18,7 @@ permissions:
 
 jobs:
   docker:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-24.04-arm
     steps:
       - name: Checkout
         uses: actions/checkout@v4.1.1
